[project]
name = "bknet"
version = "0.1.0"
description = "A general quant trading engine."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cython>=3.2.4",
    "gufo-http>=0.7.0",
    "orjson>=3.11.7",
    "picows>=1.16.0",
    'winloop>=0.5.0; sys_platform == "win32"',
    'uvloop>=0.22.1; sys_platform != "win32"',
    "ipykernel>=7.2.0",
    "curl-cffi>=0.14.0",
    "pandas>=3.0",
    "pyyaml>=6.0.3",
    "pycryptodome>=3.23.0",
    "pybase64>=1.4.3",
    "pyarrow>=23.0.1",
    "matplotlib>=3.10.8",
    "statsmodels>=0.14.6",
    "tqdm>=4.67.3",
    "ipywidgets>=8.1",
    "numba-progress>=1.1.3",
    "coincurve==20.0.0",
    "ormsgpack>=1.12.2",
    "pip>=26.1.1",
    "whenever>=0.10.0",
    "msgpack>=1.1.2",
    "polars>=1.41.2",
]

[tool.uv.workspace]
members = [
    "bknet",
]
